--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -21,7 +21,7 @@
 					<li><a href="#">Categories</a></li>
 				</ul>
 			</li>
-			<li class="<%= add_class_cps([admin_users_path,new_admin_user_path], 'active')%>">
+			<li class="<%= add_class_cps([admin_users_path,new_admin_user_path,edit_admin_user_path(current_user)], 'active')%>">
 				<a href="#">
 					<i class="fa fa-menu-arrow pull-right"></i>
 					<i class="main-icon fa fa-users"></i> <span>Users</span>
@@ -30,8 +30,12 @@
 					<li class="<%=add_class_cp(admin_users_path,'active')%>">
 						<%= link_to "All Users", admin_users_path, target: "_parent"%>
 					</li>
-					<li><a href="#">New User</a></li>
-					<li><a href="#">Your Profile</a></li>
+					<li class="<%=add_class_cp(new_admin_user_path,'active')%>">
+						<%= link_to "New User", new_admin_user_path, target: "_parent"%>
+					</li>
+					<li class="<%=add_class_cp(edit_admin_user_path(current_user),'active')%>">
+						<%= link_to "Your Profile", edit_admin_user_path(current_user), target: "_parent"%>
+					</li>
 				</ul>
 			</li>
 		</ul>
