--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -1,12 +1,15 @@
 <aside id="aside">
 	<nav id="sideNav"><!-- MAIN MENU -->
 		<ul class="nav nav-list">
+		<% if current_user.admin? || current_user.seller?%>
 			<li class="<%= add_class_cps([admin_root_path], 'active')%>">
 				<%= link_to admin_root_path, class: "dashboard", target: "_parent" do %>
 					<i class="main-icon fa fa-dashboard"></i> <span>Dashboard</span>
 				<% end %>
 			</li>
-			<li class="<%= add_class_cps([admin_products_path,new_admin_product_path,admin_categories_path], 'active')%>">
+		<%end%>
+		<% if current_user.admin? || current_user.seller?%>
+		<li class="<%= add_class_cps([admin_products_path,new_admin_product_path,admin_categories_path], 'active')%>">
 				<a href="#">
 					<i class="fa fa-menu-arrow pull-right"></i>
 					<i class="main-icon fa fa-cubes"></i> <span>Products</span>
@@ -23,6 +26,8 @@
 					</li>
 				</ul>
 			</li>
+			<%end%>
+			<% if current_user.admin? || current_user.seller?%>
 			<li class="<%= add_class_cps([admin_users_path,new_admin_user_path,edit_admin_user_path(current_user)], 'active')%>">
 				<a href="#">
 					<i class="fa fa-menu-arrow pull-right"></i>
@@ -40,6 +45,7 @@
 					</li>
 				</ul>
 			</li>
+			<%end%>
 		</ul>
 
 		<!-- SECOND MAIN LIST -->
