--- a/app/views/admin/categories/_form_mini.html.erb
+++ b/app/views/admin/categories/_form_mini.html.erb
@@ -1,3 +1,4 @@
+<%= form_for([:admin, @category], :html => { :role => "form" }) do |f| %>
 	<div id="new-category" class="panel panel-default">
 		<div class="panel-heading">
 			<span class="title elipsis">
@@ -15,23 +16,18 @@
 		<!-- panel content -->
 		<div class="panel-body">
 			<div class="form-group">
-				<label class="control-label">Category Name</label>
-				<input type="text" name="name" value="" class="form-control">
-			</div>
-			<div class="form-group">
-				<label>Parent</label>
-				<select name="parent" class="form-control pointer">
-					<option value="">--- Select ---</option>
-					<option value="1">Test 01</option>
-					<option value="2">Test 02</option>
-					<option value="3">Test 03</option>
-					<option value="4">Test 04</option>
-				</select>
-			</div>
-			<div class="form-group">
-				<label class="control-label">Description</label>
-				<textarea name="desc" rows="4" class="form-control"></textarea>
-			</div>
+					<label class="control-label">Name</label>
+					<%= f.text_field :name, class: "form-control", placeholder: "Category Name" %>
+				</div>
+				<div class="form-group">
+					<label>Parent</label>
+					<%= f.select :parent_id, Category.all.collect {|c| [ c.name, c.id ] },{ :include_blank => "--- Select ---", :selected => f.object.parent_id}, class: "form-control pointer" %>
+				</div>
+
+				<div class="form-group">
+					<label class="control-label">Description</label>
+					<%= f.text_area :description, rows: 4, class: "form-control", placeholder: "Description" %>
+				</div>
 		</div>
 
 		<div class="panel-footer">
@@ -45,3 +41,4 @@
 			</div>
 		</div>
 	</div>
+<%end%>
