--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -62,8 +62,12 @@
 					<%= f.email_field :email, class: "form-control", placeholder: "Mail Address" %>
 				</div>
 				<div class="form-group">
+					<label class="control-label">Password</label>
+					<%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+				</div>
+				<div class="form-group">
 					<label>Role</label>
-					<%= f.select :role_id, [ 1,2,3 ] ,{ :include_blank => "--- Select ---", :selected => f.object.role_id}, class: "form-control pointer" %>
+					<%= select_tag(:role_id, options_for_select([['User', 3],['Seller', 2],['Admin', 1] ], @user.role_id), {:class => 'form-control pointer'}) %>
 				</div>
 			</div>
 		</div>
