--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -2,7 +2,7 @@
 
 <!-- page title -->
 <header id="page-header">
-	<h1>Products</h1>
+	<h1><%= content_for(:title)%></h1>
 	<ol class="breadcrumb">
 		<li><a href="#">Tables</a></li>
 		<li class="active">Bootstrap Tables</li>
