--- a/app/views/users/_profile_sidenav.html.erb
+++ b/app/views/users/_profile_sidenav.html.erb
@@ -1,10 +1,10 @@
 <div class="thumbnail text-center">
-	<%= image_tag @user.avatar.thumb_md.url, :class => ""%>
+	<%= image_tag @user.avatar.url, :class => ""%>
 	<h2 class="size-18 margin-top-10 margin-bottom-0"><%= @user.fullname %></h2>
 	<h3 class="size-11 margin-top-0 margin-bottom-10 text-muted">DEVELOPER</h3>
 </div>
 
-<!-- SIDE NAV -->
+<!-- SIDE NAV
 <ul class="side-nav list-group margin-bottom-60" id="sidebar-nav">
 	<li class="list-group-item"><a href="page-profile.html"><i class="fa fa-eye"></i> PROFILE</a></li>
 	<li class="list-group-item"><a href="page-profile-projects.html"><i class="fa fa-tasks"></i> PROJECTS</a></li>
@@ -12,9 +12,9 @@
 	<li class="list-group-item"><a href="page-profile-history.html"><i class="fa fa-history"></i> HISTORY</a></li>
 	<li class="list-group-item active"><a href="page-profile-settings.html"><i class="fa fa-gears"></i> SETTINGS</a></li>
 
-	<li class="list-group-item list-toggle">   <!-- NOTE: "active" to be open on page load -->
+	<li class="list-group-item list-toggle">
 		<a data-toggle="collapse" data-parent="#sidebar-nav" href="#collapse-1">DROPDOWN EXAMPLE</a>
-		<ul id="collapse-1" class="collapse"><!-- NOTE: "collapse in" to be open on page load -->
+		<ul id="collapse-1" class="collapse">
 			<li><a href="#"><i class="fa fa-angle-right"></i> SUMBENU 1</a></li>
 			<li>
 				<span class="badge badge-red">New</span>
