--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<%- title "Edit Profile " + @user.fullname  %>
 <!-- -->
 <section>
 	<div class="container">
@@ -15,4 +16,4 @@
 		
 	</div>
 </section>
-			<!-- / -->
+<!-- / -->
