--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<%- title "Profile " + @user.fullname  %>
+
 <!-- -->
 <section>
 	<div class="container">
@@ -15,4 +17,4 @@
 		
 	</div>
 </section>
-			<!-- / -->
+<!-- / -->
