--- a/app/views/shared/_header_topbar.html.erb
+++ b/app/views/shared/_header_topbar.html.erb
@@ -13,7 +13,7 @@
 					<li><a tabindex="-1" href="#"><i class="fa fa-history"></i> ORDER HISTORY</a></li>
 					<li class="divider"></li>
 					<li><a tabindex="-1" href="#"><i class="fa fa-bookmark"></i> MY WISHLIST</a></li>
-					
+
 					<li><a tabindex="-1" href="#"><i class="fa fa-edit"></i> MY REVIEWS</a></li>
 					-->
 					<li>
@@ -50,7 +50,7 @@
 
 		<!-- left -->
 		<ul class="top-links list-inline">
-			<li class="hidden-xs"><a href="page-faq-1.html">FAQ</a></li>
+			<li class="hidden-xs"><a href="#">FAQ</a></li>
 			<li>
 				<a class="dropdown-toggle no-text-underline" data-toggle="dropdown" href="#">USD</a>
 				<ul class="dropdown-langs dropdown-menu">
