--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -61,13 +61,15 @@
 					<label class="control-label">Mail</label>
 					<%= f.email_field :email, class: "form-control", placeholder: "Mail Address" %>
 				</div>
+				<% unless @is_user_update == true %>
 				<div class="form-group">
 					<label class="control-label">Password</label>
 					<%= f.password_field :password, class: "form-control", placeholder: "Password" %>
-				</div>
+				</div>					
+				<% end%>
 				<div class="form-group">
 					<label>Role</label>
-					<%= select_tag(:role_id, options_for_select([['User', 3],['Seller', 2],['Admin', 1] ], @user.role_id), {:class => 'form-control pointer'}) %>
+					<%= select_tag("user[role_id]", options_for_select([['User', 3],['Seller', 2],['Admin', 1] ], @user.role_id), {:class => 'form-control pointer'}) %>
 				</div>
 			</div>
 		</div>
