--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -4,8 +4,8 @@
 <header id="page-header">
 	<h1><%= content_for(:title)%></h1>
 	<ol class="breadcrumb">
-		<li><a href="#">Tables</a></li>
-		<li class="active">Bootstrap Tables</li>
+		<li><a href="<%= admin_users_path %>">Users</a></li>
+		<li class="active"><%= content_for(:title)%></li>
 	</ol>
 </header>
 <!-- /page title -->
