--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,45 +1,100 @@
-<div class="page-header">
-  <h2>Orders Information <a href="/users/show" class="btn btn-primary" style="float:right">View Profile</a></h2>
+<%- title "Order #" + @order.id.to_s %>
 
-</div>
-<div class="table-responsive">
-<table class="table table-bordered">
-	<tr>
-		<th>Id</th>
-		<th>RevicerDate</th>
-		<th>RevicerAddress</th>
-		<th>Email</th>
-		<th>Phone</th>
-		<th>Created_at</th>
-		<th>Status</th>
-	</tr>
-	<%@order.each do |h|%>
-		<tr>
-			<td><%=h.id%></td>
-			<td><%=h.reciverdate.strftime('%d-%m-%y')%></td>
-			<td><%=h.reciveraddress%></td>
-			<td><%=h.email%></td>
-			<td><%=h.phone%></td>
-			<td><%=h.created_at.strftime('%d-%m-%y %H:%M:%S')%></td>
-			<td>
-				<% if h.status == "pending" %>
-					<span class="btn btn-primary"><%=h.status%></span>
-				<% elsif h.status == "success"%>
-					<span class="btn btn-success"><%=h.status%></span>
-				<%else%>
-					<span class="btn btn-danger"><%=h.status%></span>
-				<%end%>
-			</td>
-		</tr>
-	<%end%>
-</table>
-</div>
-<%= paginate @order  %>
-<style type="text/css">
-	table th{
-		text-align: center;
-	}
-	table td{
-		text-align: center;
-	}
-</style>
+<section>
+	<div class="container">
+
+      <div class="row">
+        <div class="col-md-6 col-sm-6 text-left">
+          <h4><strong>Client</strong> Details</h4>
+          <ul class="list-unstyled">
+            <li><strong>Full Name:</strong> <%= @order.reciver_fullname%></li>
+            <li><strong>Email:</strong> <%= @order.reciver_email%></li>
+            <li><strong>Phone:</strong> <%= @order.reciver_phone%></li>
+            <li><strong>Address:</strong> <%= @order.reciver_address%></li>
+          </ul>
+        </div>
+        <!--
+        <div class="col-md-6 col-sm-6 text-right">
+          <h4><strong>Payment</strong> Details</h4>
+          <ul class="list-unstyled">
+            <li><strong>Bank Name:</strong> 012345678901</li>
+            <li><strong>Account Number:</strong> 012345678901</li>
+            <li><strong>SWIFT Code:</strong> SWITCH012345678CODE</li>
+            <li><strong>V.A.T Reg #:</strong> VAT5678901CODE</li>
+          </ul>
+        </div>
+        -->
+      </div>
+
+      <div class="table-responsive">
+        <table class="table table-condensed nomargin">
+          <thead>
+            <tr>
+              <th>Item Name</th>
+              <th class="text-right" width="100px">Unit Price</th>
+              <th class="text-center">Quantity</th>
+              <th class="text-right" width="100px">Total Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @order_items.each do |p|%>
+              <% item = Product.find(p.product_id) %>
+              <tr>
+                <td>
+                  <div><strong><%= item.name%></strong></div>
+                  <small><%= item.short_description %></small>
+                </td>
+                <td class="text-right">
+                  <% unless item.price_current.present? %>
+                    <%= number_to_currency(item.price)%>
+                  <% else%>
+                    <%= number_to_currency(item.price_current)%>
+                    <span class="line-through">
+                      <%= number_to_currency(item.price)%>
+                    </span>
+                  <% end%>
+                </td>
+                <td class="text-center"><%= p.quantity %></td>
+                <td class="text-right"><%= number_to_currency(p.total_price) %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+
+      <hr class="nomargin-top" />
+      <div class="row">
+
+        <div class="col-sm-6 text-left">
+          <h4><strong>Contact</strong> Details</h4>
+
+          <% unless @order.note.blank? %>
+          <p class="nomargin nopadding">
+            <strong>Note:</strong>
+            <%= @order.note%>
+          </p><br>
+          <%end%>
+
+          <address>
+            <%= @order.reciver_address%><br>
+            Phone: <%= @order.reciver_phone%> <br>
+            Email: <%= @order.reciver_email%>
+          </address>
+
+        </div>
+
+        <div class="col-sm-6 text-right">
+
+          <ul class="list-unstyled">
+            <li><strong>Sub - Total Amount:</strong> <%= number_to_currency(@order.subtotal)%></li>
+            <li><strong>Discount:</strong> <%= number_to_currency(@order.discount)%></li>
+            <li><strong>Shipping:</strong> <%= number_to_currency(@order.shipping)%></li>
+            <li><strong>Grand Total:</strong> <%= number_to_currency(@order.total)%></li>
+          </ul>
+
+          <a class="btn btn-success" href="page-invoice-print.html" target="_blank"><i class="fa fa-print"></i> PRINT INVOICE</a>
+        </div>
+      </div>
+
+	</div>
+</section>
